Added create post to controller and form in index view

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,3 +5,21 @@
 <h2>Posts</h2>
 
 <%= render @posts %>
+
+<div class="new_post">
+  <h3>New post</h3>
+  <%= form_for(@post) do |f| %>
+  <div class="input required">
+    <%= f.label :title %>
+    <%= f.text_area :title %>
+  </div>
+    <div class="input required">
+      <%= f.label :content %>
+      <%= f.text_area :content %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+  <% end %>
+</div>
