Changed PostController_spec for POST#create

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
   <%= form_for(@post) do |f| %>
   <div class="input required">
     <%= f.label :title %>
-    <%= f.text_area :title %>
+    <%= f.text_field :title %>
   </div>
     <div class="input required">
       <%= f.label :content %>
