Route to posts#destroy

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,12 +11,12 @@
   <%= form_for(@post) do |f| %>
   <div class="input required">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_area :title %>
   </div>
-    <div class="input required">
-      <%= f.label :content %>
-      <%= f.text_area :content %>
-    </div>
+  <div class="input required">
+    <%= f.label :content %>
+    <%= f.text_area :content %>
+  </div>
 
     <div class="actions">
       <%= f.submit %>
