--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,7 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.created_at %></p>
 <p><%= @post.content %></p>
+
+<% if current_admin %>
+<%= link_to "Delete", post_path( @post ), method: :delete, data: { confirm: "Are you sure?" } %>
+<% end %>
