--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,11 +7,11 @@
 <%= render @posts %>
 
 <% if current_admin %>
-<%= link_to "New post", new_post_path %>
+<%= link_to "New post", new_post_path, :id => "new_link" %>
 <% end %>
 
 <% if current_admin %>
-<%= link_to "Admin log out", destroy_admin_session_path, method: :delete %>
+<%= link_to "Admin log out", destroy_admin_session_path, method: :delete, :id => "admin_logout_link" %>
 <% else %>
-<%= link_to "Admin log In", new_admin_session_path %>
+<%= link_to "Admin log In", new_admin_session_path, :id => "admin_link" %>
 <% end %>
