--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
 <% @post.comments.each do |comment| %>
   <p>
     <b>Commenter:</b>
-    <%= comment.user_id %>
+    <%= current_user.email %>
   </p>
   <p>
     <b>Comment:</b>
