--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,6 +13,7 @@
     <b>Commenter:</b>
     <%= current_user.email %>
   </p>
+  <%= image_tag(current_user.avatar.url) %>
   <p>
     <b>Comment:</b>
     <%= comment.text %>
