--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,10 +2,38 @@
 @import "bootstrap";
 
 body {
-  background: url('August.jpg') no-repeat center center fixed;
+  background: url('August.jpg') no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   opacity: 0.8;
+}
+
+.navbar-brand,
+.navbar-nav li a {
+    line-height: 80px;
+    height: 80px;
+    padding-top: 5;
+    color: black;
+    text-align: right;
+
+}
+
+.navbar-static-top {
+    background-color: white;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 40px;
+    background-color: #f5f5f5;
+}
+
+.text-muted {
+    text-align: center;
+    margin: 10px;
 }
