--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,9 +1,12 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
+<nav class="navbar navbar-static-top">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        <img alt="Logo" src="assets/nora.png" height="80" width="150">
-      </a>
+      <a class="navbar-brand" href="/"><img src="assets/nora.png", height="70x" width=130ppx /></a>
     </div>
-  </div>
+
+    <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+            <li><a href="">About me</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </div>
 </nav>
