--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,29 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-<%= yield %>
 
+  <div class="content">
+    <div class="background">
+    </div>
+  </div>
+
+  <div id="main">
+  <%= render "layouts/nav" %>
+  <%= yield %>
+  </div>
+  <br>
+  </body>
 </body>
+<footer class="footer">
+  <div class="container">
+    <p class="text-muted">
+      <% if current_admin %>
+      <%= link_to "New post", new_post_path, :id => "new_link" %>
+      <%= link_to "Admin log out", destroy_admin_session_path, method: :delete, :id => "admin_logout_link" %>
+      <% else %>
+      <%= link_to "Admin log In", new_admin_session_path, :id => "admin_link" %>
+      <% end %>
+    </p>
+  </div>
+</footer>
 </html>
