--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,9 +3,8 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
-  <div class="form-group">
+  <div class="fied">
     <%= f.label :avatar  %>
-    <div class="col-sm-6">
     <%= f.file_field :avatar %>
     </div>
   </div>
