--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-static-top">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/"><img src="assets/nora.png", height="70x" width=130ppx /></a>
+      <a class="navbar-brand" href="/"><img src="/assets/nora.png", height="70x" width=130ppx /></a>
     </div>
 
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li><a href="">About me</a></li>
-            <li><a href="">Contact</a></li>
+            <li><%= link_to "About", about_path %></li>
+            <li><%= link_to "Contact", contact_path %></li>
         </ul>
     </div>
 </nav>
