--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,12 @@
-<p>Welcome to my blog</p>
+<p id="notice"><%= notice %></p>
 
-<h2>Posts</h2>
+    <h2 id='welcome'>Welcome</h2>
 
-<% @posts.each do |post| %>
-  <h3><%= link_to post.title, post %></h3>
-<% end %>
+  <div class="container">
+    <div class="posts-container">
+      <% @posts.each do |post| %>
+      <h3><%= link_to post.title, post %></h3>
+      <% end %>
+      </div>
+
+  </div>
