--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,6 @@ body {
     height: 80px;
     padding-top: 5;
     color: black;
-    text-align: right;
 
 }
 
@@ -25,7 +24,7 @@ body {
 }
 
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
@@ -48,9 +47,6 @@ body {
     margin: 20px;
     box-shadow: 1px 1px 2px #333333;
     padding: 20px;
-}
-
-.posts-container h3 {
     text-align: center;
 }
 
