--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,9 @@
 <div class="new_post">
   <h2>New post</h2>
-  <%= form_for :post, url: posts_path do |f| %>
+  <%= form_for :post, url: posts_path, type: :file do |f| %>
+  <div class="field">
+    <%= f.label :image %><br>
+    <%= f.file_field :image %>
   <div class="input required">
     <%= f.label :title %>
     <%= f.text_area :title %>
