Layout of showpage

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,9 @@
-<%= form_for @post do |f| %>
+<%= form_for @post, type: :file do |f| %>
+
+<div class="field">
+  <%= f.label :image %><br>
+  <%= f.file_field :image %>
+</div>
 
 <div class="input required">
   <%= f.label :title %>
