--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,6 +4,7 @@
   <div class="field">
     <%= f.label :image %><br>
     <%= f.file_field :image %>
+  </div>
   <div class="input required">
     <%= f.label :title %>
     <%= f.text_area :title %>
