--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,6 +9,11 @@
             <li><%= link_to "Contact", contact_path %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
+            <% if current_user %>
+              <li><%= link_to "Log out", destroy_user_session_path, method: :delete %>
+              <% else %>
+                <li><%= link_to "Log in", new_user_session_path %></li>
+                <% end %>
             <% if current_admin %>
                 <li><%= link_to "New post", new_post_path, :id => "new_link" %></li>
                 <li><%= link_to "Logout", destroy_admin_session_path, method: :delete, :id => "admin_logout_link" %></li>
