--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,21 +1,4 @@
 <div class="new_post">
   <h2>New post</h2>
-  <%= form_for :post, url: posts_path, type: :file do |f| %>
-  <div class="field">
-    <%= f.label :image %><br>
-    <%= f.file_field :image %>
-  </div>
-  <div class="input required">
-    <%= f.label :title %>
-    <%= f.text_area :title %>
-  </div>
-  <div class="input required">
-    <%= f.label :content %>
-    <%= f.text_area :content %>
-  </div>
-
-    <div class="actions">
-      <%= f.submit %>
-    </div>
-  <% end %>
+  <%= render 'form' %>
 </div>
