--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,7 +24,7 @@
     <h2>Comments</h2>
     <% @post.comments.each do |comment| %>
     <p>
-      <%= image_tag(current_user.avatar.url, :width => 75, :height => 75, :crop => :fill, class: "img-circle") %>
+      <%= image_tag(@user.avatar.url, :width => 75, :height => 75, :crop => :fill, class: "img-circle") %>
       <b>Commenter:</b>
       <%= current_user.email %>
       <b>Comment:</b>
