--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post, type: :file do |f| %>
+<%= form_for :post, url: posts_path, type: :file do |f| %>
 
 <div class="field">
   <%= f.label :image %><br>
@@ -16,6 +16,6 @@
 </div>
 
   <div class="actions">
-    <%= f.submit (@post.new_record? ? "Create" : "Update") %>
+    <%= f.submit %>
   </div>
 <% end %>
