--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,10 @@
 <div class="post">
-  <h2><%= post.title %></h2>
+  <p><%= post.content %></p>
+  <noscript>
+    <%= render "/likes/form", post: post %>
+  </noscript>
+  <span class="counter" id="post-counter-<%= post.id %>">
+    <%= post.likes.count %>
+  </span>
+  <%= link_to "Like", post_likes_path(post), class: "like-button", data: { post_id: post.id } %>
 </div>
