--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,20 @@
+<head>
+  <script>
+  $(function() {
+    $( "input[type=submit], a, button" )
+      .button()
+      .click(function( event ) {
+        event.preventDefault();
+      });
+  });
+  </script>
+</head>
+
+
 <div class="container">
   <div class="posts-container">
-    <h1><%= @post.title %></h1>
-    <div class="image">
-      <%= image_tag @post.image.url, :width => 400, :height => 300 if @post.image.present? %>
-    </div>
-    <br>
-    <div class="text-container">
-    <p><%= @post.content %></p>
-  </div>
 
+    <%= render @post %>
   </div>
 </div>
 
