--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<head>
+<!-- <head>
   <script>
   $(function() {
     $( "input[type=submit], a, button" )
@@ -8,18 +8,16 @@
       });
   });
   </script>
-</head>
+</head> -->
 
-
-<div class="container">
+<!-- <div class="container">
   <div class="posts-container">
-
     <%= render @post %>
   </div>
-</div>
+</div> -->
 
 <div class="links">
-  <% if current_admin %>
+  <% if can? :edit, :destroy, @post %>
     <%= link_to "Edit", edit_post_path( @post ) %>
     <%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" } %>
   <% end %>
@@ -30,26 +28,25 @@
     <h2>Comments</h2>
     <% @post.comments.each do |comment| %>
     <p>
-      <%= image_tag(@user.avatar.url, :width => 75, :height => 75, :crop => :fill, class: "img-circle") %>
       <b>Commenter:</b>
-      <%= current_user.email %>
+      <%= comment.user.handle %>
       <b>Comment:</b>
       <%= comment.text %>
 
     </p>
     <% end %>
 
-<% if current_user %>
-<h2>Add a comment:</h2>
-<%= form_for([@post, @post.comments.build]) do |f| %>
-  <div class="field">
-    <%= f.label :text %><br />
-    <%= f.text_area :text %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
-<% else %>
-<p><%= link_to "Log in", new_user_session_path %> or <%= link_to "sign up", new_user_registration_path %> to comment</p>
-<% end %>
+    <% if can? :create, Comment %>
+      <h2>Add a comment:</h2>
+        <%= form_for([@post, @post.comments.build]) do |f| %>
+        <div class="field">
+          <%= f.label :text %><br />
+          <%= f.text_area :text %>
+        </div>
+        <div class="actions">
+          <%= f.submit %>
+        </div>
+        <% end %>
+    <% else %>
+      <p><%= link_to "Log in", new_user_session_path %> or <%= link_to "sign up", new_user_registration_path %> to comment</p>
+    <% end %>
